@@ -160,17 +160,12 @@ double clrhex2num(char * str, char p) {
 	char src[3];
 	char *endptr = NULL;
 	int iv;
-	src[1] = 0;
+	src[0] = str[2*p];
+	src[1] = str[1 + 2*p];
 	src[2] = 0;
-	if (strlen(str) == 7) {
-		src[0] = str[1 + 2*p];
-		src[1] = str[2 + 2*p];
-	} else {
-		src[0] = src[1] = str[1 + p];
-	}
 	errno = 0;
 	iv = (int) strtol(src, &endptr, 16);
-	if (errno != 0) invalid_color_spec;
+	if ((errno != 0) || (*endptr != 0)) invalid_color_spec;
 	return (double(iv) / 256.0);
 }
 
@@ -221,7 +216,7 @@ void thlayout_color::parse(char * str, bool aalpha) {
         break;
       }
       thparse_double(sv,this->R,args[0]);
-      if ((sv != TT_SV_NUMBER) && ((strlen(args[0]) == 4) || (strlen(args[0]) == 7)) && (args[0][0] == '#')) {
+      if ((nargs == 1) && (sv != TT_SV_NUMBER) && (strlen(args[0]) == 6)) {
     	  // CSS color specification starting with #
     	  this->R = clrhex2num(args[0], 0) * 100.0;
     	  this->G = clrhex2num(args[0], 1);
