@@ -1,6 +1,7 @@
 Therion 6.0.6 (in progress):
 
 therion:
+ * added support for hex rgb color specification (e.g. color map-fg ffeeaa)
  * using -value with point extra triggers deprecation warning. It is
    undocumented feature/bug.
 
